--- a/style.css
+++ b/style.css
@@ -1,23 +1,23 @@
 .buttons {
-    text-align: center;
+  text-align: center;
 }
 .input {
-    text-align: center;
+  text-align: center;
 }
-.timer{
-    text-align: center;
+.timer {
+  text-align: center;
 }
 
 #myProgress {
-    margin: auto;
-    width: 100%;
-    background-color: grey;
-    margin-top: 2rem;
-    margin-bottom: 1rem
-  }
-  
-  #myBar {
-    width: 0%;
-    height: 30px;
-    background-color: green;
-  }
+  margin: auto;
+  width: 100%;
+  background-color: grey;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
+
+#myBar {
+  width: 0%;
+  height: 30px;
+  background-color: green;
+}
